# opal

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  SPEC.md  Taskfile.yml  WORKSPACE.bazel  bazel-bin  bazel-testlogs  buf.gen.yaml  core_diff.txt  flake.nix  full_diff.txt  generate_build.py  github_logs.txt  go.mod  go.sum  job_log.txt  job_log3.txt  job_log4.txt  job_log5.txt  job_log6.txt  job_log7.txt  job_log8.txt  job_log_mac.txt  job_log_nix.txt  job_log_nix2.txt  make_gleam_modules.sh  merge_diff.txt  output.txt  parse.py  patch_script.py  rules_gleam.patch  small_diff.txt  update_backend_client.sh  update_proto.sh
.github/workflows/: ci.yml  peregrine.yml
docs/: spec.md
docs/superpowers/plans/: 2026-04-24-opal-enhancements.md  2026-04-25-opal-missing-features.md
falcon/: BUILD.bazel  README.md  elixir.bzl  gleam.toml  manifest.toml  test_jido.gleam
falcon/src/: falcon.gleam
falcon/src/adapters/: jido_ffi.erl  pure_agent.gleam
falcon/src/domain/: bridge.gleam  budget.gleam  cache.gleam  memory.gleam  planning.gleam  reasoning.gleam  search.gleam  security.gleam  stats.gleam  teammem.gleam  triggers.gleam  verification.gleam
falcon/src/jido/: agent.ex
falcon/src/ports/: connect_server.gleam  rpc.gleam
falcon/test/: BUILD.bazel  falcon_test.gleam
harness/: README.md  gt.sh
opal_backend/: README.md  gleam.toml
opal_backend/src/: opal_backend.gleam  stats.gleam
opal_backend/test/: opal_backend_test.gleam
opal_frontend/: go.mod  history.go  main.go  theme.go
peregrine/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
peregrine/adapters/: BUILD.bazel  adk_agent.go  animator.go  backend_client.go  msgpack_codec.go  tts.go
peregrine/db/: BUILD.bazel  mangle.go  models.go  pocketbase.go  query.sql  query.sql.go  schema.sql  sqlc.yaml
peregrine/domain/: BUILD.bazel  state.go
peregrine/llm/: BUILD.bazel  anthropic.go  client.go  openai.go
peregrine/ports/: BUILD.bazel  interfaces.go
peregrine/view/: BUILD.bazel  render.go  theme.go
peregrine/viewmodel/: BUILD.bazel  actions.go  history.go  viewmodel.go  viewmodel_test.go  voice.go
peregrine_backend/: README.md  gleam.toml  manifest.toml  test_jido.gleam
peregrine_backend/src/: bridge.gleam  jido_agent.gleam  peregrine_backend.gleam  planning.gleam  search.gleam  security.gleam  teammem.gleam  triggers.gleam
peregrine_backend/test/: peregrine_backend_test.gleam
peregrine_frontend/: actions.go  agent.go  animator.go  go.mod  go.sum  main.go  voice.go
proto/: BUILD.bazel  buf.gen.yaml
proto/agent/v1/: agent.proto
proto/falcon/v1/: BUILD.bazel  falcon.proto
proto/peregrine/v1/: BUILD.bazel  peregrine.proto
tools/build_rules/: BUILD.bazel  gleam.bzl
