module(
    name = "peregrine_falcon",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "rules_proto", version = "6.0.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//peregrine:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_harmonica",
    "com_github_charmbracelet_lipgloss",
    "com_github_vmihailenco_msgpack_v5",
    "org_golang_google_adk",
    "org_golang_google_genai",
    "org_golang_google_protobuf",
)

# We will create a custom bazel rule for Gleam since an official rules_gleam bzlmod is not yet standard.
# We will use rules_foreign_cc or standard genrule for Gleam as an elegant stopgap until native rules arrive.
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
