module(
    name = "peregrine_falcon",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "rules_proto", version = "6.0.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//peregrine:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_harmonica",
    "com_github_charmbracelet_lipgloss",
    "com_github_vmihailenco_msgpack_v5",
    "org_golang_google_adk",
    "org_golang_google_genai",
    "org_golang_google_protobuf",
)

bazel_dep(name = "rules_gleam", version = "0.1.13")

gleam = use_extension("@rules_gleam//:extensions.bzl", "gleam")
gleam.deps(
    gleam_toml = "//falcon:gleam.toml",
    manifest_toml = "//falcon:manifest.toml",
)
use_repo(
    gleam,
    "hex_directories",
    "hex_envoy",
    "hex_exception",
    "hex_filepath",
    "hex_gleam_crypto",
    "hex_gleam_erlang",
    "hex_gleam_http",
    "hex_gleam_json",
    "hex_gleam_stdlib",
    "hex_glisten",
    "hex_gramps",
    "hex_houdini",
    "hex_hpack_erl",
    "hex_logging",
    "hex_marceau",
    "hex_mist",
    "hex_msgpack",
    "hex_platform",
    "hex_simplifile",
    "hex_wisp",
    "hex_gleeunit",
)
