module(
    name = "peregrine_falcon",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//peregrine:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_harmonica",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_x_exp_teatest",
    "com_github_gen2brain_malgo",
    "com_github_liushuangls_go_anthropic_v2",
    "com_github_sashabaranov_go_openai",
    "com_github_spf13_cobra",
    "com_github_vmihailenco_msgpack_v5",
    "org_golang_google_adk",
    "org_golang_google_genai",
    "org_golang_google_protobuf",
)

bazel_dep(name = "rules_gleam", version = "0.1.13")

gleam = use_extension("@rules_gleam//:extensions.bzl", "gleam")
gleam.deps(
    gleam_toml = "//falcon:gleam.toml",
)
use_repo(
    gleam,
    "hex_abacus",
    "hex_certifi",
    "hex_crontab",
    "hex_deep_merge",
    "hex_directories",
    "hex_envoy",
    "hex_exception",
    "hex_filepath",
    "hex_finch",
    "hex_fuse",
    "hex_gleam_crypto",
    "hex_gleam_erlang",
    "hex_gleam_http",
    "hex_gleam_json",
    "hex_gleam_otp",
    "hex_gleam_stdlib",
    "hex_gleeunit",
    "hex_glisten",
    "hex_gramps",
    "hex_hackney",
    "hex_houdini",
    "hex_hpack_erl",
    "hex_hpax",
    "hex_idna",
    "hex_jason",
    "hex_jido",
    "hex_jido_action",
    "hex_jido_signal",
    "hex_logging",
    "hex_lua",
    "hex_luerl",
    "hex_marceau",
    "hex_memento",
    "hex_metrics",
    "hex_mime",
    "hex_mimerl",
    "hex_mint",
    "hex_mist",
    "hex_msgpack",
    "hex_msgpax",
    "hex_multigraph",
    "hex_nimble_options",
    "hex_nimble_pool",
    "hex_ok",
    "hex_parse_trans",
    "hex_phoenix_pubsub",
    "hex_platform",
    "hex_poolboy",
    "hex_private",
    "hex_req",
    "hex_simplifile",
    "hex_splode",
    "hex_ssl_verify_fun",
    "hex_telemetry",
    "hex_telemetry_metrics",
    "hex_tzdata",
    "hex_unicode_util_compat",
    "hex_uniq",
    "hex_wisp",
    "hex_zoi",
)

single_version_override(
    module_name = "rules_gleam",
    patch_strip = 1,
    patches = ["//:rules_gleam.patch"],
    version = "0.1.13",
)
