load("@gazelle//:def.bzl", "gazelle")
load("@rules_gleam//gleam:defs.bzl", "gleam_library")

exports_files([
    "gleam.toml",
    "manifest.toml",
])

gazelle(
    name = "gazelle",
    gazelle = "@rules_gleam//gazelle",
)

genrule(
    name = "jido_agent_beam",
    srcs = ["src/jido/agent.ex"],
    outs = ["Elixir.Falcon.JidoAgent.beam"],
    cmd = "elixirc -o $(@D) $<",
)

gleam_library(
    name = "falcon_lib",
    srcs = glob([
        "src/**/*.gleam",
        "src/**/*.erl",
    ]),
    deps = [
        # ":jido_agent_beam", # cannot be in deps because it's not a gleam library
        "@hex_gleam_erlang//:gleam",
        "@hex_gleam_json//:gleam",
        "@hex_gleam_stdlib//:gleam",
        "@hex_mist//:gleam",
        "@hex_msgpack//:gleam",
        "@hex_wisp//:gleam",
    ],
    data = [":jido_agent_beam"],
    strip_src_prefix = "falcon/src",
    visibility = ["//visibility:public"],
)

alias(
    name = "falcon",
    actual = "//falcon/bin:falcon_bin",
)
