load("@gazelle//:def.bzl", "gazelle")
load("@rules_gleam//gleam:defs.bzl", "gleam_library")

exports_files([
    "gleam.toml",
    "manifest.toml",
])

# gazelle(
#     name = "gazelle",
#     gazelle = "@rules_gleam//gazelle",
# )

gleam_library(
    name = "falcon_lib",
    srcs = glob([
        "src/**/*.gleam",
        "src/**/*.erl",
    ]),
    strip_src_prefix = "falcon/src",
    visibility = ["//visibility:public"],
    deps = [
        "@hex_gleam_erlang//:gleam",
        "@hex_gleam_json//:gleam",
        "@hex_gleam_stdlib//:gleam",
        "@hex_mist//:gleam",
        "@hex_msgpack//:gleam",
        "@hex_simplifile//:gleam",
        "@hex_wisp//:gleam",
    ],
)

alias(
    name = "falcon",
    actual = "//falcon/bin:falcon_bin",
)

alias(
    name = "falcon_test",
    actual = "//falcon/test:falcon_test",
)
