load("@rules_gleam//gleam:defs.bzl", "gleam_test")

gleam_test(
    name = "falcon_test",
    srcs = glob([
        "**/*.gleam",
    ]),
    strip_src_prefix = "falcon/test",
    visibility = ["//visibility:public"],
    deps = [
        "//falcon:falcon_lib",
        "@hex_gleeunit//:gleam",
    ],
)
