load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapters",
    srcs = [
        "adk_agent.go",
        "animator.go",
        "backend_client.go",
        "msgpack_codec.go",
        "tts.go",
    ],
    importpath = "github.com/alexthotse/peregrine/adapters",
    visibility = ["//visibility:public"],
    deps = [
        "//peregrine/gen/falcon/v1:falcon",
        "//peregrine/gen/falcon/v1/falconv1connect",
        "@com_connectrpc_connect//:connect",
        "@com_github_charmbracelet_harmonica//:harmonica",
        "@com_github_liushuangls_go_anthropic_v2//:go-anthropic",
        "@com_github_sashabaranov_go_openai//:go-openai",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
        "@org_golang_google_adk//agent",
        "@org_golang_google_adk//agent/llmagent",
        "@org_golang_google_adk//model",
        "@org_golang_google_genai//:genai",
    ],
)
