load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "mangle.go",
        "models.go",
        "pocketbase.go",
        "query.sql.go",
    ],
    importpath = "github.com/alexthotse/peregrine/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_mangle//ast",
        "@com_github_google_mangle//parse",
        "@com_github_pocketbase_pocketbase//:pocketbase",
        "@com_github_pocketbase_pocketbase//core",
    ],
)
