load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "mangle.go",
        "models.go",
        "pocketbase.go",
        "query.sql.go",
    ],
    importpath = "github.com/alexthotse/peregrine/db",
    visibility = ["//visibility:public"],
    deps = [
        "//peregrine/vendor/github.com/google/mangle/ast",
        "//peregrine/vendor/github.com/google/mangle/parse",
        "//peregrine/vendor/github.com/pocketbase/pocketbase",
        "//peregrine/vendor/github.com/pocketbase/pocketbase/core",
    ],
)
