load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "llm",
    srcs = ["client.go"],
    importpath = "github.com/alexthotse/peregrine/llm",
    visibility = ["//visibility:public"],
    deps = [
        "//peregrine/vendor/google.golang.org/adk/agent",
        "//peregrine/vendor/google.golang.org/adk/agent/llmagent",
        "//peregrine/vendor/google.golang.org/adk/model",
        "//peregrine/vendor/google.golang.org/genai",
    ],
)
