load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "view",
    srcs = [
        "render.go",
        "theme.go",
    ],
    importpath = "github.com/alexthotse/peregrine/view",
    visibility = ["//visibility:public"],
    deps = [
        "//peregrine/domain",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)
