load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "viewmodel",
    srcs = [
        "actions.go",
        "history.go",
        "viewmodel.go",
        "voice.go",
    ],
    importpath = "github.com/alexthotse/peregrine/viewmodel",
    visibility = ["//visibility:public"],
    deps = [
        "//peregrine/adapters",
        "//peregrine/domain",
        "//peregrine/view",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)
