load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "viewmodel",
    srcs = [
        "actions.go",
        "history.go",
        "viewmodel.go",
        "voice.go",
    ],
    importpath = "github.com/alexthotse/peregrine/viewmodel",
    visibility = ["//visibility:public"],
    deps = [
        "//peregrine/adapters",
        "//peregrine/domain",
        "//peregrine/vendor/github.com/charmbracelet/bubbles/textinput",
        "//peregrine/vendor/github.com/charmbracelet/bubbletea",
        "//peregrine/vendor/github.com/charmbracelet/lipgloss",
        "//peregrine/view",
    ],
)

go_test(
    name = "viewmodel_test",
    srcs = ["viewmodel_test.go"],
    deps = [
        ":viewmodel",
        "//peregrine/adapters",
        "//peregrine/vendor/github.com/charmbracelet/bubbletea",
        "//peregrine/vendor/github.com/charmbracelet/x/exp/teatest",
    ],
)
