load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "falconv1_proto",
    srcs = ["falcon.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "falconv1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc_v2"],
    importpath = "peregrine/gen/falcon/v1",
    proto = ":falconv1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "falcon",
    embed = [":falconv1_go_proto"],
    importpath = "peregrine/gen/falcon/v1",
    visibility = ["//visibility:public"],
)
