load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "peregrinev1_proto",
    srcs = ["peregrine.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "peregrinev1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc_v2"],
    importpath = "peregrine/gen/peregrine/v1",
    proto = ":peregrinev1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "peregrine",
    embed = [":peregrinev1_go_proto"],
    importpath = "peregrine/gen/peregrine/v1",
    visibility = ["//visibility:public"],
)
